# quip

./: README.ja.md  README.md  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: scan_real_card.rs
src-tauri/icons/: icon.icns
src-tauri/src/: import.rs  lib.rs  main.rs  scan.rs  thumbs.rs  volumes.rs
src-tauri/tests/: import_flow.rs
src/lib/: api.ts  i18n.svelte.ts  wizard.svelte.ts
src/lib/components/: DestinationStep.svelte  DoneStep.svelte  ImportStep.svelte  PatternInput.svelte  SessionsStep.svelte  SourceStep.svelte
src/routes/: +page.svelte
