[package]
name = "quip"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.4.3"
tauri-plugin-dialog = "2.7.1"
blake3 = "1.8.5"
notify = "8.2.0"
walkdir = "2.5.0"
roxmltree = "0.21.1"
chrono = { version = "0.4.45", features = ["serde"] }
kamadak-exif = "0.6.1"
image = { version = "0.25.10", default-features = false, features = ["jpeg"] }

[dev-dependencies]
tempfile = "3.27.0"
tauri = { version = "2", features = ["protocol-asset", "test"] }

